force-app/main/default/objects/Subscription__c/Subscription__c.object-meta.xml
<CustomObject>
    <label>予約購読</label>
    <nameField>
        <displayFormat>SS{YYYY}{MM}-{000000}</displayFormat>
        <label>オブジェクトID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>