force-app/main/default/objects/Subscription__c/fields/FlgSubStop__c.field-meta.xml
<CustomField>
    <fullName>FlgSubStop__c</fullName>
    <label>停止フラグ</label>
    <length>1</length>
    <type>Text</type>
</CustomField>