force-app/main/default/objects/Subscription__c/fields/SubBonusName__c.field-meta.xml
<CustomField>
    <fullName>SubBonusName__c</fullName>
    <label>予約購読特典名</label>
    <length>200</length>
    <type>Text</type>
</CustomField>