force-app/main/default/objects/Subscription__c/fields/SubUserId__c.field-meta.xml
<CustomField>
    <fullName>SubUserId__c</fullName>
    <label>予約購読登録者ID</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>