force-app/main/default/objects/Subscription__c/fields/SubUserNo__c.field-meta.xml
<CustomField>
    <fullName>SubUserNo__c</fullName>
    <externalId>true</externalId>
    <label>購読者番号</label>
    <length>200</length>
    <type>Text</type>
</CustomField>