force-app/main/default/objects/Subscription__c/listViews/View.listView-meta.xml
<ListView>
    <fullName>View</fullName>
    <columns>NAME</columns>
    <columns>SubUserNo__c</columns>
    <columns>ContactId__c</columns>
    <columns>ToyokeizaiId__c</columns>
    <columns>SubBonusName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FlgSubStop__c</field>
        <operation>equals</operation>
        <value>9</value>
    </filters>
    <label>すべての予約購読</label>
</ListView>